Fixing layout issues on mobile

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -45,6 +45,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 h1 {
@@ -181,33 +182,6 @@ h1 {
   }
 }
 
-/* @keyframes animateShake {
-  0% {
-  t
-  }
-  25% {
-    border-image-source: conic-gradient(transparent 90deg, #2563eb 90deg);
-  }
-  50% {
-    border-image-source: conic-gradient(transparent 180deg, #2563eb 180deg);
-  }
-  75% {
-    border-image-source: conic-gradient(transparent 270deg, #2563eb 270deg);
-  }
-  100% {
-    border-image-source: conic-gradient(transparent 360deg, #2563eb 360deg);
-  }
-}
-    
-@layer utilities {
-  .animate-borderRotate {
-    animation: borderRotate 1s linear infinite;
-    border-width: 2px;
-    border-style: solid;
-    border-image-slice: 12;
-    border-radius: 50px; /* Makes it circular */
-  /* }
-} */ 
 
 @keyframes subtleShake {
   0% {
